--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
       <div class="footer">
         <a
-        href="https://luisfelipedejesusm.github.io/WAP-HM4/"> <img
+        href="https://validator.w3.org/check?url=https://github.com/luisfelipedejesusm/WAP-HM4"> <img
         src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
         alt="html validator"/></a>
        
